--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="default.asp">Shadi</a></li>
   </div>
   <div class="middle">
-    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" />
+    <img src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png" height="92" width="272"/>
     <div id="search_form">
       <form action="search.php" method="get">
         <p>
